Event Alignment fix

--- a/client/src/pages/Events/Events.css
+++ b/client/src/pages/Events/Events.css
@@ -2,5 +2,6 @@
     display: grid;
     grid-template-columns: repeat(auto-fit,17rem);
     gap: 2rem;
-    padding: auto auto;
+    align-items: center;
+    justify-content: center;
   }
